--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0"
+clap = { version = "3.2", features = ["derive"] }
+tokio = "1.0"
+reqwest = "0.11"
+ron = "0.8"
+serde = { version = "1.0", features = ["derive"] }
