--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,10 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "3.2", features = ["derive"] }
-tokio = "1.0"
 reqwest = "0.11"
 ron = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+sitemap = "0.4.1"
+tokio = { version = "1.0", features = ["full"] }
+texting_robots = "0.2.1"
+url = "2.3"
