find & parse sitemaps (if any), returning a list of URLs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,14 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
+bytes = "1.2"
+async-recursion = "1.0.0"
 clap = { version = "3.2", features = ["derive"] }
-reqwest = "0.11"
+flate2 = "1.0.24"
+reqwest = { version = "0.11", features = ["gzip"] }
 ron = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 sitemap = "0.4.1"
-tokio = { version = "1.0", features = ["full"] }
 texting_robots = "0.2.1"
+tokio = { version = "1.0", features = ["full"] }
 url = "2.3"
