--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ flate2 = "1.0.24"
 reqwest = { version = "0.11", features = ["gzip"] }
 ron = "0.8"
 serde = { version = "1.0", features = ["derive"] }
+spyglass-lens = "0.1"
 sitemap = "0.4.1"
 texting_robots = "0.2.1"
 tokio = { version = "1.0", features = ["full"] }
