--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytes = "1.2"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "3.2", features = ["derive"] }
 flate2 = "1.0.24"
+governor = "0.4"
 regex = "1.0"
 reqwest = { version = "0.11", features = ["gzip"] }
 ron = "0.8"
