--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,9 @@ bytes = "1.2"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "3.2", features = ["derive"] }
 flate2 = "1.0.24"
+futures = "0.3"
 governor = "0.4"
+nonzero_ext = "0.3.0"
 regex = "1.0"
 reqwest = { version = "0.11", features = ["gzip"] }
 ron = "0.8"
