--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ nonzero_ext = "0.3.0"
 regex = "1.0"
 reqwest = { version = "0.11", features = ["gzip"] }
 ron = "0.8"
+rusoto_s3 = "0.48.0"
 rss = "2.0.1"
 serde = { version = "1.0", features = ["derive"] }
 sitemap = "0.4.1"
