--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ rusoto_core = "0.48.0"
 rusoto_s3 = "0.48.0"
 serde = { version = "1.0", features = ["derive"] }
 sitemap = "0.4.1"
-spyglass-lens = "0.1"
+spyglass-lens = "0.1.4"
 tendril = "0.4.2"
 texting_robots = "0.2.1"
 tokio = { version = "1.0", features = ["full"] }
@@ -45,6 +45,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "std"]}
 url = "2.3"
 uuid = { version = "1.1.2", features = ["v4", "fast-rng"]}
 warc = "0.3"
+walkdir = "2.3.2"
 
 [[bin]]
 name = "netrunner"
