--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ blake2 = "0.10.4"
 bytes = "1.2"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.0", features = ["derive"] }
+dashmap = "5.4"
 ego-tree = "0.6.2"
 feedfinder = "0.4.0"
 flate2 = "1.0.24"
