--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ sitemap = "0.4.1"
 spyglass-lens = "0.1.5"
 tendril = "0.4.2"
 texting_robots = "0.2.1"
+thiserror = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 tokio-retry = "0.3"
 tracing = "0.1"
